--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Cafe organico</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src='./scripts/script.js'></script>
 </head>
 <body>
     <div class="container">
@@ -34,8 +36,10 @@
                 </section>
 
                 <section class="introduccion" id="introduccion" >
-                    <div>
-                        <h2>El café</h2>
+                    <h2>El café</h2>
+                <div class="container-cafe"> 
+                    <div class="cafe">
+
 
                         <p>Este mercado está conformado, en su gran mayoría, por personas que trabajan en oficinas y que se encuentran con alto grado de estrés, por ello requieren productos que además de satisfacer sus necesidades, Es por ello, que comienzan a invertir más dinero en productos que tengan mayor valor agregado.
                         </p>
@@ -43,9 +47,24 @@
                         <p>Es cierto que hoy existen muy buenas máquinas que preparan café americano, café expreso, capuchino, moka chino; sin embargo, su costo es bastante elevado y no justifica darle un uso doméstico. O de lo contrario, para satisfacer la necesidad de rapidez, el consumidor cuenta con café instantáneo que se preparan de forma inmediata pero el sabor, color y aroma no es el mismo. 
                         </p>
                     </div>
+                        <div class="pic">
+                            <figure>
+                                <img src="./img/cafe1.jpg" height="450px" width="500px" alt="">
+                            </figure>
+                        </div>
+                    </div>
+
+                </section>
+
+                <section class="tiposdecafe">
+                    <div class="container-tipos">
+                        
+                    </div>
                 </section>
             </div>
         </main>
     </div>
+
 </body>
+
 </html>
