--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="#banner">Home</a></li>
                         <li><a href="#introduccion">Cafe</a></li>
                         <li><a href="#variedades">Variedades</a></li>
-                        <li><a href="">Cafe organico</a></li>
+                        <li><a href="#organico">Cafe organico</a></li>
                     </ul>
                 </nav>
             </div>
@@ -96,8 +96,23 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="cafeorganico" id="organico">
+                    <div class="container-organico">
+                        <h2>Cafe Organico</h2>
+
+                        <p>El café orgánico es el tipo de café producido sin la ayuda de sustancias químicas artificiales, como ciertos aditivos, pesticidas y herbicidas.
+                            Se siembra a la sombra de otro tipo de árboles de mayor altura, lo cual proporciona humedad y ésta ayuda a la producción de un café de alta calidad, con este proceso se busca contribuir a la mejora del suelo, utilizando técnicas que lo hagan más fértil, produciendo un café sustentable.
+                            </p>
+
+                    </div>
+                </section>
             </div>
         </main>
+
+        <footer>
+
+        </footer>
     </div>
 
 </body>
