--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <li><a href="#introduccion">Cafe</a></li>
                         <li><a href="#variedades">Variedades</a></li>
                         <li><a href="#organico">Cafe organico</a></li>
+                        <li><a href="#beneficios">Beneficios</a></li>
                     </ul>
                 </nav>
             </div>
@@ -99,14 +100,40 @@
 
                 <section class="cafeorganico" id="organico">
                     <div class="container-organico">
-                        <h2>Cafe Organico</h2>
+                        <h2>Café Organico</h2>
 
                         <p>El café orgánico es el tipo de café producido sin la ayuda de sustancias químicas artificiales, como ciertos aditivos, pesticidas y herbicidas.
                             Se siembra a la sombra de otro tipo de árboles de mayor altura, lo cual proporciona humedad y ésta ayuda a la producción de un café de alta calidad, con este proceso se busca contribuir a la mejora del suelo, utilizando técnicas que lo hagan más fértil, produciendo un café sustentable.
                             </p>
+                            <div class="filtrante">
+                            <h3>FILTRANTE PERUANO</h3>
+                        <p>En la actualidad, el café orgánico del Perú, reconocido en el mundo por su excelente calidad, ha logrado posicionarse como uno de los mejores cafés del mundo. </p>
+                                
+                            <p>Nuestro café es selecto para un paladar exquisito. Por la combinación de aroma y color. Accesible en el precio, 100% café de Chanchamayo, Jaén y Quillabamba. - Café de exportación. - café orgánico filtrante Molido Peruano.</p>
+                        </div>
+                    </div>
 
+                   
+                </section>
+
+
+                <section class="beneficios" id="beneficios">
+                    <h2>beneficios del café organico</h2>
+                    <div class="container-beneficios">
+                        <img src="./img/beneficios.jpg" height="500px" alt="">
+                    <div>
+                        <p>Reduce el riesgo de Alzheimer</p>
+                        <p>Reduce el dolor de cabeza</p>
+                        <p>Brinda energía</p>
+                        <p>Ayuda a sobre llevar la depresión</p>
+                        <p>Disminuye la concentración de azúcar el la sangre</p>
+                        <p>Reduce el riesgo de desarrollo de diabetes</p>
+                        <p>Contiene antioxidantes </p>
+                    </div>
                     </div>
                 </section>
+
+
             </div>
         </main>
 
