--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li><a href="#variedades">Variedades</a></li>
                         <li><a href="#organico">Cafe organico</a></li>
                         <li><a href="#beneficios">Beneficios</a></li>
+                        <li><a href="#producto">producto</a></li>
                     </ul>
                 </nav>
             </div>
@@ -118,7 +119,7 @@
 
 
                 <section class="beneficios" id="beneficios">
-                    <h2>beneficios del café organico</h2>
+                    <h2>Beneficios del café organico</h2>
                     <div class="container-beneficios">
                         <img src="./img/beneficios.jpg" height="500px" alt="">
                     <div>
@@ -133,12 +134,27 @@
                     </div>
                 </section>
 
-
+                <section class="producto" id="producto">
+                    <h2>Presentacion del Producto</h2>
+                    <div class="container-producto">
+                        <div>
+                        <p class="tprincipal">Este producto está diseñado para colocarlo en una taza con agua caliente los segundos que desee el consumidor y tiene como principales características:</p>
+                        <p>- Aroma y sabor intenso de café natural. </p>
+                        <p>- Sobres de aluminio con picado en el borde fácil de abrir.</p>
+                        <p>- Fácil de preparar, solo es cuestión de segundos.</p>
+                        <p>- Facilidad para prepararlo en cualquier lugar y en cualquier momento.</p>
+                    </div>
+                        <div>
+                        <img src="./img/producto.png" alt="">
+                        </div>
+                    
+                    </div>
+                </section>
             </div>
         </main>
 
         <footer>
-
+           <h3> Derechos reservados @Café-Organico </h3>
         </footer>
     </div>
 
