--- a/index.html
+++ b/index.html
@@ -143,18 +143,63 @@
                         <p>- Sobres de aluminio con picado en el borde fácil de abrir.</p>
                         <p>- Fácil de preparar, solo es cuestión de segundos.</p>
                         <p>- Facilidad para prepararlo en cualquier lugar y en cualquier momento.</p>
+                    </div  >
+                        <div class="images">
+                        <img src="./img/Imagen1.png" width="200px" height="300px" alt="">
+                        <img src="./img/Imagen3.jpg" width="200px" height="300px" alt="">
                     </div>
-                        <div>
-                        <img src="./img/producto.png" alt="">
-                        </div>
                     
                     </div>
+                </section>
+
+                <section class="venta">
+                    <div class="container-venta">
+                    <figure>
+                        <img src="./img/producto2.png" alt="">
+
+                        <div>
+                            <h3>Precio venta</h3>
+                            <h3 class="precio">$12.00</h3>
+                            <button>Comprar</button>
+
+                        </div>
+
+                    </figure>
+                </div>
                 </section>
             </div>
         </main>
 
         <footer>
-           <h3> Derechos reservados @Café-Organico </h3>
+
+            <div class="container-footer">
+           <div class="contac">
+
+               <h4>Contacto :</h4>
+               <div>
+                   <img src="./img/logo/whatsap.png" width="40px" height="40px" alt="">
+                    <p>+51 933 049 057</p>
+                </div>
+
+                <div>
+                    <img src="./img/logo/telefono.png" width="40px" height="40px" alt="">
+                    <p>2582021</p>
+                </div>
+           </div>
+           <div class="separation">
+
+           </div>
+           <div class="direccion">
+               <div>
+                   <h4>Ubicados en :</h4>
+                   <div class="location">
+                       <img src="./img/logo/lcoation.png" width="40px" height="40px" alt="">
+                       <p>San Juan de Lurigancho</p>
+                    </div>
+                   
+               </div>
+           </div>
+        </div>
         </footer>
     </div>
 
